--- a/public/page1.html
+++ b/public/page1.html
@@ -17,7 +17,7 @@
     <script src="https://cdn.bootcss.com/vuex/3.0.1/vuex.min.js"></script>
     <script src="https://cdn.bootcss.com/axios/0.18.0/axios.js"></script>
     
-    <script src="https://unpkg.com/element-ui@2.4.9/lib/index.js"></script> 
+    <!-- <script src="https://unpkg.com/element-ui@2.4.9/lib/index.js"></script>  -->
     <!-- <script src="https://cdn.bootcss.com/qs/6.5.2/qs.min.js"></script> -->
     <div id="app"></div>
     <!-- built files will be auto injected -->
